--- a/src/main/resources/html/tools.html
+++ b/src/main/resources/html/tools.html
@@ -40,6 +40,7 @@
   <li>Debug StockActor: last trade price and HL, HO, OL, CL shown.</li>
   <li>Tick OrderActor: to get recent orders and positions.</li>
   <li>Debug StockActor: last trade price, HL, HO, OL, CL and position shown.</li>
+  <li>Tick StockActor: to get order history</li>
 </ol>
 <script type="text/javascript">
   'use strict';
