--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -6,13 +6,18 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400" rel="stylesheet">
   <style type="text/css">
     html { font-size: 20px }
+    div.note { height: 1rem; overflow-y: hidden; background-color: #fff; padding: 0 1rem }
+    div.note:hover { height: auto }
   </style>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body style="background-color: #e7e7e7; font-family: 'Roboto Condensed', sans-serif">
+<body style="background-color: #eee; font-family: 'Roboto Condensed', sans-serif">
+  <div class="note">
+    <p><code>/openprice</code>: to get the open prices in case the app is started before 9.30am</p>
+  </div>
   <app-root></app-root>
 </body>
 </html>
