--- a/src/test/resources/booksByPublicationDate.html
+++ b/src/test/resources/booksByPublicationDate.html
@@ -9,6 +9,7 @@
     a:hover { color: #111; border-bottom: 1px solid #888 }
     .title { font: bold 1.2rem sans-serif; margin-top: 0 }
     .authors, .issued, .publishers { font-family: sans-serif }
+    .publishers { color: #e33}
     img { display: block; float: left; margin-right: 1rem }
     .info { float: left }
     .description { clear: both }
